--- a/node_heat/package.json
+++ b/node_heat/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "prisma": "3.3.0",
+    "query-string": "^7.0.1",
     "socket.io": "^4.3.1"
   },
   "devDependencies": {
